# rustcalw

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  VISION.md
.github/workflows/: rust-ci.yml
docs/: dev-setup-windows.md  module-mapping.md  windows-compat-matrix.md
docs/adr/: ADR-001-mirror-strategy.md  ADR-002-windows-ipc.md  ADR-003-platform-abstraction.md  ADR-004-crate-structure.md  ADR-005-test-strategy.md
rust/: Cargo.toml
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/cli/tests/: e2e_config.rs  e2e_gateway.rs
rust/crates/cli/tests/fixtures/: valid.json
rust/crates/config/: Cargo.toml
rust/crates/config/src/: env_substitution.rs  io.rs  lib.rs  paths.rs
rust/crates/config/src/types/: agents.rs  base.rs  channels.rs  gateway.rs  hooks.rs  messages.rs  mod.rs  models.rs  openclaw.rs  secrets.rs
rust/crates/config/tests/: config_io_test.rs  live_config_test.rs
rust/crates/config/tests/fixtures/: full.json  minimal.json
rust/crates/gateway/: Cargo.toml
rust/crates/gateway/src/: client_info.rs  close_reason.rs  connect_error_details.rs  error_codes.rs  lib.rs  method_scopes.rs  origin_check.rs  protocol_frames.rs  role_policy.rs  schema_agent.rs  schema_agents_models_skills.rs  schema_channels.rs  schema_config.rs  schema_cron.rs  schema_devices.rs  schema_exec_approvals.rs  schema_logs_chat.rs  schema_nodes.rs  schema_primitives.rs  schema_push.rs  schema_secrets.rs  schema_sessions.rs  schema_snapshot.rs  schema_wizard.rs  security_path.rs  server.rs  server_constants.rs
rust/crates/providers/: Cargo.toml
rust/crates/providers/src/: github_copilot_auth.rs  github_copilot_models.rs  kilocode_shared.rs  lib.rs  oauth_types.rs  qwen_portal_oauth.rs
rust/crates/shared/: Cargo.toml
rust/crates/shared/src/: assistant_error_format.rs  assistant_identity_values.rs  avatar_policy.rs  chat_content.rs  chat_envelope.rs  chat_message_content.rs  config_eval.rs  config_ui_hints_types.rs  device_auth.rs  device_auth_store.rs  entry_metadata.rs  entry_status.rs  frontmatter.rs  gateway_bind_url.rs  lib.rs  model_param_b.rs  net_ip.rs  net_ipv4.rs  node_list_parse.rs  node_list_types.rs  node_match.rs  node_resolve.rs  operator_scope_compat.rs  pid_alive.rs  requirements.rs  session_types.rs  session_usage_timeseries_types.rs  string_normalization.rs  string_sample.rs  subagents_format.rs  tailscale_status.rs  text_assistant_visible.rs  text_chunking.rs  text_code_regions.rs  text_join_segments.rs  text_reasoning_tags.rs  url_userinfo.rs  usage_aggregates.rs  usage_types.rs
scripts/: stage-bundled-plugin-runtime.mjs
src/gateway/: control-ui.http.test.ts  gateway.test.ts  server.agent.gateway-server-agent-a.test.ts  server.agent.gateway-server-agent-b.test.ts  server.auth.control-ui.suite.ts  server.auth.default-token.suite.ts  server.auth.shared.ts  server.canvas-auth.test.ts  server.models-voicewake-misc.test.ts  server.node-invoke-approval-bypass.test.ts  server.reload.test.ts  server.sessions.gateway-server-sessions-a.test.ts  session-utils.test.ts
src/gateway/server/: plugins-http.test.ts
src/gateway/server-methods/: send.test.ts
src/test-helpers/: state-dir-env.ts
test/: windows-gateway-smoke.e2e.test.ts
