[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/greenroom-lab/rustcalw"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tempfile = "3"

# Internal crates
rustcalw-shared = { path = "crates/shared" }
rustcalw-config = { path = "crates/config" }
rustcalw-providers = { path = "crates/providers" }
rustcalw-gateway = { path = "crates/gateway" }
