[package]
name = "rustcalw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rustcalw-config = { path = "../config" }
rustcalw-shared = { path = "../shared" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
