[package]
name = "rustcalw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rustcalw-config = { path = "../config" }
rustcalw-gateway = { path = "../gateway" }
rustcalw-shared = { path = "../shared" }
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
reqwest.workspace = true
tempfile.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
