[package]
name = "rustcalw-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
regex.workspace = true
rustcalw-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
